feat: added mygrep prototype

--- a/cat-grep/Makefile
+++ b/cat-grep/Makefile
@@ -1,9 +1,8 @@
 .PHONY: all clean
-TARGET = mycat
-SRCS = myls.c
 
 all:
 	gcc mycat.c -o mycat
+	gcc mygrep.c -o mygrep
 
 clean:
-	rm -f *.o mycat
+	rm -f *.o mycat mygrep
