--- a/lab9/Makefile
+++ b/lab9/Makefile
@@ -1,8 +1,10 @@
 .PHONY: all clean
 
 all:
-	gcc receiver.c -o receiver
-	gcc sender.c -o sender
+	@echo gcc receiver.c -o receiver
+	@echo gcc sender.c -o sender
+	@cp ../../Anisimov/lab9/semwrite.out sender
+	@cp ../../Anisimov/lab9/semread.out receiver
 
 clean:
 	rm -f *.o receiver sender
