--- a/lab9/Makefile
+++ b/lab9/Makefile
@@ -1,10 +1,8 @@
 .PHONY: all clean
 
 all:
-	@echo gcc receiver.c -o receiver
-	@echo gcc sender.c -o sender
-	@cp ../../Anisimov/lab9/semwrite.out sender
-	@cp ../../Anisimov/lab9/semread.out receiver
+	gcc receiver.c -o receiver
+	gcc sender.c -o sender
 
 clean:
 	rm -f *.o receiver sender
